Fixed z-index issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 
 /***** inner page css *****/
 .with-login #header:after{content:'';background:url(../images/pattent.png) repeat 0 0;width:100%;height:100%;display:block;position:absolute;top:0;left:0;opacity:.4;z-index:-1;}
-.with-login #header{background:#f26f6f;width:100%;height:auto;margin:0;position:relative;padding:30px 0 10px;border-bottom:6px solid #221e1e;z-index:10;transition:ease-in-out .5s;}
+.with-login #header{background:#f26f6f;width:100%;height:auto;margin:0;position:relative;padding:30px 0 10px;border-bottom:6px solid #221e1e;z-index:100;transition:ease-in-out .5s;}
 .with-login #header.bg-02{background:#9570d7;}
 .with-login #header.bg-03{background:#71afd6;}
 
@@ -240,7 +240,7 @@ a:hover, a:focus{outline:none;outline:0;outline-offset:0;}
 .left-my-picture ul li a:hover:after{background:rgba(242,111,111,.6);opacity:1;}
 .left-my-picture ul li a img{display:block;border-radius:4px;width:100%;max-height:81px;}
 
-#loader,#loader-nodata{position:absolute;top:0;left:0;width:100%;height:100%;text-align: center; background:#e9e9e9; opacity:1; z-index:999999; transition: top .8s cubic-bezier(.7,0,.3,1);-moz-transition:top .8s cubic-bezier(.7,0,.3,1);-webkit-transition:top .8s cubic-bezier(.7,0,.3,1);-o-transition:top .8s cubic-bezier(.7,0,.3,1);}
+#loader,#loader-nodata{position:absolute;top:0;left:0;width:100%;height:100%;text-align: center; background:#e9e9e9; opacity:1; z-index:99; transition: top .8s cubic-bezier(.7,0,.3,1);-moz-transition:top .8s cubic-bezier(.7,0,.3,1);-webkit-transition:top .8s cubic-bezier(.7,0,.3,1);-o-transition:top .8s cubic-bezier(.7,0,.3,1);}
 .loader-container {position:absolute;width:100%;margin-left:0;left:0;top:50%;display:inline-block;-webkit-transform:translateY(-50%); -ms-transform: translateY(-50%); -moz-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%);}
 .my-account{position:relative;width:100%;display:inline-block;vertical-align:top;margin:0 0 -60px;padding:0 0 25px;}
 .my-account:before{background:#f3f3f3;top:90px;left:-70%;width:240%;position:absolute;content:'';height:1px;}
